# sump

./: LICENSE  README.md  pyproject.toml
sump/: __main__.py  main.py  parser.py
tests/: test_sump.py
