[tool.poetry]
name = "sump"
version = "0.1.0"
description = "Summarize code projects for LLM consumption"
authors = ["Alex Yankov <yankov.alex@gmail.com>"]
license = "BSD"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
tree-sitter = "^0.22.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sump = "sump.main:main"
